[gd_scene load_steps=2 format=3 uid="uid://nmm24rufa8jk"]

[ext_resource type="Script" path="res://Scripts/settings_tab_container.gd" id="1_s03py"]

[node name="Settings_Tab_Container" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s03py")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Sound" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="LabelMusic" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="SliderMusic" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 0.75
step = 0.05
value = 0.75

[node name="LabelSoundFX" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sound FX Volume"

[node name="SliderFX" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 0.8
step = 0.05
value = 0.8

[node name="LabelRos" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ros Volume
"

[node name="SliderRos" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Extras" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Extras"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Extras/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="CheckSeasonal" type="CheckButton" parent="TabContainer/Extras/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Seaonal Content"

[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/SliderMusic" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/SliderFX" to="." method="_on_slider_fx_value_changed"]
[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/SliderRos" to="." method="_on_slider_ros_value_changed"]
[connection signal="toggled" from="TabContainer/Extras/MarginContainer/VBoxContainer/CheckSeasonal" to="." method="_on_check_seasonal_toggled"]
